Almost finished watermark

--- a/scrape/scrape.ipynb
+++ b/scrape/scrape.ipynb
@@ -8,12 +8,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To login to Tequila, the `tequila-sessions` package must be installed from https://github.com/antoinealb/python-tequila"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, re, scrapy, tequila\n",
+    "import os, re, tequila\n",
     "from bs4 import BeautifulSoup as bs\n",
     "from tqdm import tqdm"
    ]
@@ -53,7 +60,7 @@
    "outputs": [],
    "source": [
     "not_fetched = []\n",
-    "do_txt, do_img = False, True\n",
+    "do_txt, do_img = True, True\n",
     "\n",
     "for pn in tqdm(pagenames):\n",
     "    raw = bs(conn.get(\"http://wiki.epfl.ch/esn/\" + pn).text).find(\"div\", {\"id\" : \"content\"})\n",
